# boolean-circuits

./: Cargo.toml  README.md
benches/: benchmark.rs
src/: circuit.rs  gate.rs  main.rs  utils.rs
